--- a/1.0 - Test LLM OpenAI.ipynb
+++ b/1.0 - Test LLM OpenAI.ipynb
@@ -2,19 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "id": "435d8af7",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Imports\n",
-    "\n",
     "import os\n",
     "from dotenv import load_dotenv\n",
     "from langchain.prompts import PromptTemplate\n",
     "from langchain_core.output_parsers import StrOutputParser\n",
-    "from langchain_openai import OpenAI\n",
-    "import datetime\n",
+    "from langchain_openai import ChatOpenAI  # Note the change from OpenAI to ChatOpenAI\n",
+    "import sqlite3\n",
+    "import chromadb\n",
     "\n",
     "load_dotenv()\n",
     "OPENAI_API_KEY = os.getenv(\"OPENAI_API_KEY\")"
@@ -22,7 +22,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
+   "id": "b3395999",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# load database\n",
+    "db = sqlite3.connect('sapiens_gff.db')\n",
+    "cursor = db.cursor()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
    "id": "b14ed310",
    "metadata": {},
    "outputs": [],
@@ -36,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 19,
    "id": "e9f44c0e",
    "metadata": {},
    "outputs": [],
@@ -47,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 20,
    "id": "885d6f5f",
    "metadata": {},
    "outputs": [],
@@ -99,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 21,
    "id": "d05d6ecc",
    "metadata": {},
    "outputs": [],
@@ -130,27 +142,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 40,
    "id": "9605683c",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "TypeError",
-     "evalue": "RunnableSequence.invoke() takes from 2 to 3 positional arguments but 4 were given",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mTypeError\u001b[39m                                 Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[29]\u001b[39m\u001b[32m, line 12\u001b[39m\n\u001b[32m      6\u001b[39m prompt = PromptTemplate(\n\u001b[32m      7\u001b[39m     input_variables=[\u001b[33m\"\u001b[39m\u001b[33mcontext\u001b[39m\u001b[33m\"\u001b[39m, \u001b[33m\"\u001b[39m\u001b[33mschema\u001b[39m\u001b[33m\"\u001b[39m, \u001b[33m\"\u001b[39m\u001b[33mquestion\u001b[39m\u001b[33m\"\u001b[39m], template=TEMPLATE\n\u001b[32m      8\u001b[39m )\n\u001b[32m     10\u001b[39m chain = prompt | llm | StrOutputParser()\n\u001b[32m---> \u001b[39m\u001b[32m12\u001b[39m \u001b[43mchain\u001b[49m\u001b[43m.\u001b[49m\u001b[43minvoke\u001b[49m\u001b[43m(\u001b[49m\u001b[43mcontext\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mschema\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mquestions\u001b[49m\u001b[43m[\u001b[49m\u001b[32;43m0\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m)\u001b[49m\n",
-      "\u001b[31mTypeError\u001b[39m: RunnableSequence.invoke() takes from 2 to 3 positional arguments but 4 were given"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "llm = OpenAI(model=\"gpt-4o-mini\", temperature=0.1)\n",
+    "# Use ChatOpenAI instead of OpenAI\n",
+    "llm = ChatOpenAI(model=\"gpt-4o-mini\", temperature=0.1)\n",
     "\n",
-    "TEMPLATE = '''Context: {context}. Given a genome annotation in a GFF/GTF format and all of its data is stored in a sqlite3 database with the following SCHEMA: {schema},\n",
-    "    guide me with a query or a walkthrough based on to answer the following question: {question}'''\n",
+    "TEMPLATE = '''\n",
+    "{context}\n",
+    "\n",
+    "### Given a genome annotation in a GFF/GTF format and all of its data is stored in a sqlite3 database with the following SCHEMA: \n",
+    "<schema>\n",
+    "{schema}\n",
+    "</schema>\n",
+    "\n",
+    "<user_question>\n",
+    "Guide me with a query or a walkthrough based on to answer the following question: {question}\n",
+    "</user_question>\n",
+    "'''\n",
     "\n",
     "prompt = PromptTemplate(\n",
     "    input_variables=[\"context\", \"schema\", \"question\"], template=TEMPLATE\n",
@@ -158,54 +169,128 @@
     "\n",
     "chain = prompt | llm | StrOutputParser()\n",
     "\n",
-    "chain.invoke(context, schema, questions[0])"
+    "# Correct way to invoke the chain with a dictionary of inputs\n",
+    "result = chain.invoke({\n",
+    "    \"context\": context,\n",
+    "    \"schema\": schema,\n",
+    "    \"question\": questions[0]\n",
+    "})"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "5b000618",
+   "execution_count": 41,
+   "id": "241966a4",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from langchain_core.output_parsers import StrOutputParser\n",
-    "from langchain_core.prompts import PromptTemplate\n",
-    "from langchain_openai import OpenAI\n",
+    "with open('results/results_context2.txt', 'w', encoding='utf-8') as f:\n",
+    "    f.write(result)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "id": "5b571e75",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Use ChatOpenAI instead of OpenAI\n",
+    "llm = ChatOpenAI(model=\"gpt-4o-mini\", temperature=0.1)\n",
     "\n",
-    "prompt_template = \"Tell me a {adjective} joke\"\n",
+    "TEMPLATE = '''\n",
+    "### Given a genome annotation in a GFF/GTF format and all of its data is stored in a sqlite3 database with the following SCHEMA: \n",
+    "<schema>\n",
+    "{schema}\n",
+    "</schema>\n",
+    "\n",
+    "<user_question>\n",
+    "Guide me with a query or a walkthrough based on to answer the following question: {question}\n",
+    "</user_question>\n",
+    "'''\n",
     "\n",
     "prompt = PromptTemplate(\n",
-    "    input_variables=[\"adjective\"], template=prompt_template\n",
+    "    input_variables=[\"context\", \"schema\", \"question\"], template=TEMPLATE\n",
     ")\n",
     "\n",
-    "llm = OpenAI()\n",
     "chain = prompt | llm | StrOutputParser()\n",
     "\n",
-    "chain.invoke(\"your adjective here\")"
+    "# Correct way to invoke the chain with a dictionary of inputs\n",
+    "result = chain.invoke({\n",
+    "    \"context\": context,\n",
+    "    \"schema\": schema,\n",
+    "    \"question\": questions[0]\n",
+    "})"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "f5779d8c",
+   "execution_count": 43,
+   "id": "2ca01dbd",
    "metadata": {},
    "outputs": [],
    "source": [
-    "current_time = datetime.datetime.now().strftime(\"%Y%m%d%H%M%S\")\n",
+    "with open('results/results_no_context2.txt', 'w', encoding='utf-8') as f:\n",
+    "    f.write(result)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "id": "3013e32e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('gene', 1108), ('transcript', 1660)]"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "query = '''\n",
+    "SELECT 'gene' AS feature_type, COUNT(*) AS count\n",
+    "FROM features\n",
+    "WHERE seqid = '3' AND featuretype = 'gene'\n",
+    "GROUP BY feature_type\n",
     "\n",
-    "llm = OpenAI(model=\"gpt-4o-mini\", temperature=0.1)\n",
+    "UNION ALL\n",
     "\n",
-    "for ix, question in enumerate(questions):\n",
-    "    TEMPLATE = f'''Context: {context_str}. Given a genome annotation in a GFF/GTF format and all of its data is stored in a sqlite3 database with the following SCHEMA: {schema},\n",
-    "    guide me with a query or a walkthrough based on to answer the following question: {question}'''\n",
+    "SELECT 'transcript' AS feature_type, COUNT(*) AS count\n",
+    "FROM features\n",
+    "WHERE seqid = '3' AND featuretype IN ('transcript')\n",
+    "GROUP BY feature_type;\n",
+    "'''\n",
     "\n",
-    "    chain = LLMChain(llm=llm)\n",
-    "\n",
-    "    res = chain.run({\"topic\": TEMPLATE})\n",
-    "\n",
-    "    with open(f'results/openai/llm_test_question_{ix}_{current_time}.txt', 'w') as f:\n",
-    "        f.write(res)\n",
-    "\n"
+    "cursor.execute(query)\n",
+    "results = cursor.fetchall()\n",
+    "results"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "id": "2dae1c45",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Genes on chromosome 3: 1108\n",
+      "Transcripts on chromosome 3: 1660\n"
+     ]
+    }
+   ],
+   "source": [
+    "genes_chr3 = sum(1 for feature in db.features_of_type('gene') if feature.seqid == '3')\n",
+    "transcripts_chr3 = sum(1 for feature in db.features_of_type('transcript') if feature.seqid == '3')\n",
+    "print(f\"Genes on chromosome 3: {genes_chr3}\")\n",
+    "print(f\"Transcripts on chromosome 3: {transcripts_chr3}\")"
    ]
   }
  ],
@@ -225,7 +310,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.10"
+   "version": "3.12.2"
   }
  },
  "nbformat": 4,
