update: corrected some parts of the scripts and notebook

--- a/1.1 - Test LLM OpenAI.ipynb
+++ b/1.1 - Test LLM OpenAI.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "435d8af7",
    "metadata": {},
    "outputs": [],
@@ -12,9 +12,10 @@
     "from dotenv import load_dotenv\n",
     "from langchain.prompts import PromptTemplate\n",
     "from langchain_core.output_parsers import StrOutputParser\n",
-    "from langchain_openai import ChatOpenAI  # Note the change from OpenAI to ChatOpenAI\n",
+    "from langchain_core.rate_limiters import InMemoryRateLimiter\n",
+    "from langchain_openai import ChatOpenAI # Note the change from OpenAI to ChatOpenAI\n",
     "import sqlite3\n",
-    "import chromadb\n",
+    "import datetime\n",
     "\n",
     "load_dotenv()\n",
     "OPENAI_API_KEY = os.getenv(\"OPENAI_API_KEY\")"
@@ -22,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 2,
    "id": "b3395999",
    "metadata": {},
    "outputs": [],
@@ -34,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 3,
    "id": "b14ed310",
    "metadata": {},
    "outputs": [],
@@ -48,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 3,
    "id": "e9f44c0e",
    "metadata": {},
    "outputs": [],
@@ -59,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 4,
    "id": "885d6f5f",
    "metadata": {},
    "outputs": [],
@@ -111,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 9,
    "id": "d05d6ecc",
    "metadata": {},
    "outputs": [],
@@ -130,108 +131,109 @@
     "    \"\"\"What is the chromosomal position of the BRCA1 gene?\"\"\",\n",
     "    \"\"\"On which chromosomes are the genes NFKB1, NFKB2, REL, RELA and RELB located?\"\"\",\n",
     "    \"\"\"Print the names of the 2 genes located immediately before and after the gene COL1A2, respectively\"\"\",\n",
-    "    \"\"\"What is the biotype of the following genes XIST, MALAT1, BRCA1,NFKB1, NFKB2, REL, RELA, RELB and COL1A2?\"\"\",\n",
-    "    \"\"\"What strand are the HOTAIR, HOXC11, and HOXC12 genes located on?\"\"\",\n",
-    "    \"\"\"Which genes are located between the HOXC11 and HOXC12 genes on + and - strands?\"\"\",\n",
-    "    \"\"\"Get the following informations about each transcript isoforms of the XIST, MALAT1, BRCA1, NFKB1, COL1A2, HOTAIR, HOXC11, and HOXC12 genes: chromosomal location and position, size, number of exons, average exon size, strand, and biotype. Organize all the information in a table and save it.\"\"\",\n",
-    "    \"\"\"Generate a scatterplot to represent the distribution of gene sizes in the X chromosome.\"\"\",\n",
-    "    \"\"\"Generate a stacked barplot chart to represent the proportions of protein-coding, lncRNA and miRNA genes on each chromosome separately.\"\"\",\n",
-    "    \"\"\"Generate a boxplot to represent the comparison of protein_coding, lncRNA, and miRNA transcript sizes\"\"\"\n",
+    "    \"\"\"What is the biotype of the following genes XIST, MALAT1, BRCA1,NFKB1, NFKB2, REL, RELA, RELB and COL1A2?\"\"\"\n",
+    "    # \"\"\"What strand are the HOTAIR, HOXC11, and HOXC12 genes located on?\"\"\",\n",
+    "    # \"\"\"Which genes are located between the HOXC11 and HOXC12 genes on + and - strands?\"\"\",\n",
+    "    # \"\"\"Get the following informations about each transcript isoforms of the XIST, MALAT1, BRCA1, NFKB1, COL1A2, HOTAIR, HOXC11, and HOXC12 genes: chromosomal location and position, size, number of exons, average exon size, strand, and biotype. Organize all the information in a table and save it.\"\"\",\n",
+    "    # \"\"\"Generate a scatterplot to represent the distribution of gene sizes in the X chromosome.\"\"\",\n",
+    "    # \"\"\"Generate a stacked barplot chart to represent the proportions of protein-coding, lncRNA and miRNA genes on each chromosome separately.\"\"\",\n",
+    "    # \"\"\"Generate a boxplot to represent the comparison of protein_coding, lncRNA, and miRNA transcript sizes\"\"\"\n",
     "]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 6,
+   "id": "07d68ce9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rate_limiter = InMemoryRateLimiter(requests_per_second=5, check_every_n_seconds=0.1, max_bucket_size=10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "id": "9605683c",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Use ChatOpenAI instead of OpenAI\n",
-    "llm = ChatOpenAI(model=\"gpt-4o-mini\", temperature=0.1)\n",
+    "llm = ChatOpenAI(model=\"gpt-4o-mini\", temperature=0.1, rate_limiter=rate_limiter)\n",
     "\n",
-    "TEMPLATE = '''\n",
-    "{context}\n",
+    "current_time = datetime.datetime.now().strftime(\"%Y%m%d%H%M%S\")\n",
     "\n",
-    "### Given a genome annotation in a GFF/GTF format and all of its data is stored in a sqlite3 database with the following SCHEMA: \n",
-    "<schema>\n",
-    "{schema}\n",
-    "</schema>\n",
+    "for ix, question in enumerate(questions):\n",
+    "    TEMPLATE = '''\n",
+    "    {context}\n",
     "\n",
-    "<user_question>\n",
-    "Guide me with a query or a walkthrough based on to answer the following question: {question}\n",
-    "</user_question>\n",
-    "'''\n",
+    "    ### Given a genome annotation in a GFF/GTF format and all of its data is stored in a sqlite3 database with the following SCHEMA: \n",
+    "    <schema>\n",
+    "    {schema}\n",
+    "    </schema>\n",
     "\n",
-    "prompt = PromptTemplate(\n",
-    "    input_variables=[\"context\", \"schema\", \"question\"], template=TEMPLATE\n",
-    ")\n",
+    "    <user_question>\n",
+    "    Guide me with a query or a walkthrough based on to answer the following question: {question}\n",
+    "    </user_question>\n",
+    "    '''\n",
     "\n",
-    "chain = prompt | llm | StrOutputParser()\n",
+    "    prompt = PromptTemplate(\n",
+    "        input_variables=[\"context\", \"schema\", \"question\"], template=TEMPLATE\n",
+    "    )\n",
     "\n",
-    "# Correct way to invoke the chain with a dictionary of inputs\n",
-    "result = chain.invoke({\n",
-    "    \"context\": context,\n",
-    "    \"schema\": schema,\n",
-    "    \"question\": questions[0]\n",
-    "})"
+    "    chain = prompt | llm | StrOutputParser()\n",
+    "\n",
+    "    # Correct way to invoke the chain with a dictionary of inputs\n",
+    "    result = chain.invoke({\n",
+    "        \"context\": context,\n",
+    "        \"schema\": schema,\n",
+    "        \"question\": question\n",
+    "    })\n",
+    "\n",
+    "    with open(f'results/with-prompt/openai/llm_test_question_{ix}_{current_time}.txt', 'w', encoding='utf-8') as f:\n",
+    "        f.write(result)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
-   "id": "241966a4",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "with open('results/results_context2.txt', 'w', encoding='utf-8') as f:\n",
-    "    f.write(result)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 10,
    "id": "5b571e75",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Use ChatOpenAI instead of OpenAI\n",
-    "llm = ChatOpenAI(model=\"gpt-4o-mini\", temperature=0.1)\n",
+    "llm = ChatOpenAI(model=\"gpt-4o-mini\", temperature=0.1, rate_limiter=rate_limiter)\n",
     "\n",
-    "TEMPLATE = '''\n",
-    "### Given a genome annotation in a GFF/GTF format and all of its data is stored in a sqlite3 database with the following SCHEMA: \n",
-    "<schema>\n",
-    "{schema}\n",
-    "</schema>\n",
+    "current_time = datetime.datetime.now().strftime(\"%Y%m%d%H%M%S\")\n",
     "\n",
-    "<user_question>\n",
-    "Guide me with a query or a walkthrough based on to answer the following question: {question}\n",
-    "</user_question>\n",
-    "'''\n",
+    "for ix, question in enumerate(questions):\n",
     "\n",
-    "prompt = PromptTemplate(\n",
-    "    input_variables=[\"context\", \"schema\", \"question\"], template=TEMPLATE\n",
-    ")\n",
+    "    TEMPLATE = '''\n",
+    "    ### Given a genome annotation in a GFF/GTF format and all of its data is stored in a sqlite3 database with the following SCHEMA: \n",
+    "    <schema>\n",
+    "    {schema}\n",
+    "    </schema>\n",
     "\n",
-    "chain = prompt | llm | StrOutputParser()\n",
+    "    <user_question>\n",
+    "    Guide me with a query or a walkthrough based on to answer the following question: {question}\n",
+    "    </user_question>\n",
+    "    '''\n",
     "\n",
-    "# Correct way to invoke the chain with a dictionary of inputs\n",
-    "result = chain.invoke({\n",
-    "    \"context\": context,\n",
-    "    \"schema\": schema,\n",
-    "    \"question\": questions[0]\n",
-    "})"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 43,
-   "id": "2ca01dbd",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "with open('results/results_no_context2.txt', 'w', encoding='utf-8') as f:\n",
-    "    f.write(result)"
+    "    prompt = PromptTemplate(\n",
+    "        input_variables=[\"context\", \"schema\", \"question\"], template=TEMPLATE\n",
+    "    )\n",
+    "\n",
+    "    chain = prompt | llm | StrOutputParser()\n",
+    "\n",
+    "    # Correct way to invoke the chain with a dictionary of inputs\n",
+    "    result = chain.invoke({\n",
+    "        \"context\": context,\n",
+    "        \"schema\": schema,\n",
+    "        \"question\": question\n",
+    "    })\n",
+    "\n",
+    "    with open(f'results/no-prompt/openai/llm_test_question_{ix}_{current_time}.txt', 'w', encoding='utf-8') as f:\n",
+    "        f.write(result)"
    ]
   },
   {
