update: de-commented some questions in notebook

--- a/1.1 - Test LLM OpenAI.ipynb
+++ b/1.1 - Test LLM OpenAI.ipynb
@@ -112,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "d05d6ecc",
    "metadata": {},
    "outputs": [],
@@ -132,12 +132,12 @@
     "    \"\"\"On which chromosomes are the genes NFKB1, NFKB2, REL, RELA and RELB located?\"\"\",\n",
     "    \"\"\"Print the names of the 2 genes located immediately before and after the gene COL1A2, respectively\"\"\",\n",
     "    \"\"\"What is the biotype of the following genes XIST, MALAT1, BRCA1,NFKB1, NFKB2, REL, RELA, RELB and COL1A2?\"\"\"\n",
-    "    # \"\"\"What strand are the HOTAIR, HOXC11, and HOXC12 genes located on?\"\"\",\n",
-    "    # \"\"\"Which genes are located between the HOXC11 and HOXC12 genes on + and - strands?\"\"\",\n",
-    "    # \"\"\"Get the following informations about each transcript isoforms of the XIST, MALAT1, BRCA1, NFKB1, COL1A2, HOTAIR, HOXC11, and HOXC12 genes: chromosomal location and position, size, number of exons, average exon size, strand, and biotype. Organize all the information in a table and save it.\"\"\",\n",
-    "    # \"\"\"Generate a scatterplot to represent the distribution of gene sizes in the X chromosome.\"\"\",\n",
-    "    # \"\"\"Generate a stacked barplot chart to represent the proportions of protein-coding, lncRNA and miRNA genes on each chromosome separately.\"\"\",\n",
-    "    # \"\"\"Generate a boxplot to represent the comparison of protein_coding, lncRNA, and miRNA transcript sizes\"\"\"\n",
+    "    \"\"\"What strand are the HOTAIR, HOXC11, and HOXC12 genes located on?\"\"\",\n",
+    "    \"\"\"Which genes are located between the HOXC11 and HOXC12 genes on + and - strands?\"\"\",\n",
+    "    \"\"\"Get the following informations about each transcript isoforms of the XIST, MALAT1, BRCA1, NFKB1, COL1A2, HOTAIR, HOXC11, and HOXC12 genes: chromosomal location and position, size, number of exons, average exon size, strand, and biotype. Organize all the information in a table and save it.\"\"\",\n",
+    "    \"\"\"Generate a scatterplot to represent the distribution of gene sizes in the X chromosome.\"\"\",\n",
+    "    \"\"\"Generate a stacked barplot chart to represent the proportions of protein-coding, lncRNA and miRNA genes on each chromosome separately.\"\"\",\n",
+    "    \"\"\"Generate a boxplot to represent the comparison of protein_coding, lncRNA, and miRNA transcript sizes\"\"\"\n",
     "]"
    ]
   },
