added: data; modified: all notebooks, scripts and prompt; created: notebook for chromadb

--- a/1.2 - Test LLM OpenAI.ipynb
+++ b/1.2 - Test LLM OpenAI.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "435d8af7",
    "metadata": {},
    "outputs": [],
@@ -16,9 +16,12 @@
     "from langchain_openai import ChatOpenAI # Note the change from OpenAI to ChatOpenAI\n",
     "import sqlite3\n",
     "import datetime\n",
+    "import chromadb\n",
+    "\n",
     "\n",
     "load_dotenv()\n",
-    "OPENAI_API_KEY = os.getenv(\"OPENAI_API_KEY\")"
+    "OPENAI_API_KEY = os.getenv(\"OPENAI_API_KEY\")\n",
+    "collection = chromadb.PersistentClient(path=\"databases/\").get_collection(name=\"questions_code_examples_python\")"
    ]
   },
   {
@@ -49,12 +52,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "e9f44c0e",
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open(\"1.1 - prompt.txt\", \"r\", encoding=\"utf-8\") as f:\n",
+    "with open(\"1.1 - prompt.md\", \"r\", encoding=\"utf-8\") as f:\n",
     "    context = f.read()"
    ]
   },
@@ -143,6 +146,35 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "9cbca6ed",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n"
+     ]
+    }
+   ],
+   "source": [
+    "def get_code_examples(question_query, n = 3):\n",
+    "    results = collection.query(\n",
+    "        query_texts=[question_query],\n",
+    "        n_results=3,\n",
+    "        include=['metadatas', 'documents']\n",
+    "    )\n",
+    "\n",
+    "    dict_results = {}\n",
+    "    for i, doc in enumerate(results['documents'][0]):\n",
+    "        dict_results.update({doc:results['metadatas'][0][i]['code_example']})\n",
+    "\n",
+    "    return dict_results"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 6,
    "id": "07d68ce9",
    "metadata": {},
@@ -153,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "9605683c",
    "metadata": {},
    "outputs": [],
@@ -164,6 +196,8 @@
     "current_time = datetime.datetime.now().strftime(\"%Y%m%d%H%M%S\")\n",
     "\n",
     "for ix, question in enumerate(questions):\n",
+    "    questions_codes = get_code_examples(question)\n",
+    "\n",
     "    TEMPLATE = '''\n",
     "    {context}\n",
     "\n",
@@ -175,10 +209,15 @@
     "    <user_question>\n",
     "    Guide me with a query or a walkthrough based on to answer the following question: {question}\n",
     "    </user_question>\n",
+    "\n",
+    "    Here's some code examples in Python 3 that might help:\n",
+    "    <code_examples>\n",
+    "    {questions_codes}\n",
+    "    </code_examples>\n",
     "    '''\n",
     "\n",
     "    prompt = PromptTemplate(\n",
-    "        input_variables=[\"context\", \"schema\", \"question\"], template=TEMPLATE\n",
+    "        input_variables=[\"context\", \"schema\", \"question\", \"question_codes\"], template=TEMPLATE\n",
     "    )\n",
     "\n",
     "    chain = prompt | llm | StrOutputParser()\n",
@@ -187,7 +226,8 @@
     "    result = chain.invoke({\n",
     "        \"context\": context,\n",
     "        \"schema\": schema,\n",
-    "        \"question\": question\n",
+    "        \"question\": question,\n",
+    "        \"question_codes\": questions_codes\n",
     "    })\n",
     "\n",
     "    with open(f'results/with-prompt/openai/llm_test_question_{ix}_{current_time}.txt', 'w', encoding='utf-8') as f:\n",
@@ -196,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "5b571e75",
    "metadata": {},
    "outputs": [],
@@ -207,7 +247,8 @@
     "current_time = datetime.datetime.now().strftime(\"%Y%m%d%H%M%S\")\n",
     "\n",
     "for ix, question in enumerate(questions):\n",
-    "\n",
+    "    questions_codes = get_code_examples(question)\n",
+    "    \n",
     "    TEMPLATE = '''\n",
     "    ### Given a genome annotation in a GFF/GTF format and all of its data is stored in a sqlite3 database with the following SCHEMA: \n",
     "    <schema>\n",
@@ -217,19 +258,24 @@
     "    <user_question>\n",
     "    Guide me with a query or a walkthrough based on to answer the following question: {question}\n",
     "    </user_question>\n",
+    "\n",
+    "    Here's some code examples in Python 3 that might help:\n",
+    "    <code_examples>\n",
+    "    {questions_codes}\n",
+    "    </code_examples>\n",
     "    '''\n",
     "\n",
     "    prompt = PromptTemplate(\n",
-    "        input_variables=[\"context\", \"schema\", \"question\"], template=TEMPLATE\n",
+    "        input_variables=[\"schema\", \"question\", \"question_codes\"], template=TEMPLATE\n",
     "    )\n",
     "\n",
     "    chain = prompt | llm | StrOutputParser()\n",
     "\n",
     "    # Correct way to invoke the chain with a dictionary of inputs\n",
     "    result = chain.invoke({\n",
-    "        \"context\": context,\n",
     "        \"schema\": schema,\n",
-    "        \"question\": question\n",
+    "        \"question\": question,\n",
+    "        \"question_codes\": questions_codes\n",
     "    })\n",
     "\n",
     "    with open(f'results/no-prompt/openai/llm_test_question_{ix}_{current_time}.txt', 'w', encoding='utf-8') as f:\n",
