modified: all scripts and openai notebook now have ddl instead of schema (ver 1.3)

--- a/1.3 - Test LLM OpenAI.ipynb
+++ b/1.3 - Test LLM OpenAI.ipynb
@@ -63,54 +63,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "885d6f5f",
+   "execution_count": null,
+   "id": "a2733932",
    "metadata": {},
    "outputs": [],
    "source": [
-    "schema = '''CREATE TABLE features (\n",
-    "    id text,\n",
-    "    seqid text,\n",
-    "    source text,\n",
-    "    featuretype text,\n",
-    "    start int,\n",
-    "    end int,\n",
-    "    score text,\n",
-    "    strand text,\n",
-    "    frame text,\n",
-    "    attributes text,\n",
-    "    extra text,\n",
-    "    bin int,\n",
-    "    primary key (id)\n",
-    "    );\n",
-    "\n",
-    "CREATE TABLE relations (\n",
-    "    parent text,\n",
-    "    child text,\n",
-    "    level int,\n",
-    "    primary key (parent, child, level)\n",
-    "    );\n",
-    "\n",
-    "CREATE TABLE meta (\n",
-    "    dialect text,\n",
-    "    version text\n",
-    "    );\n",
-    "\n",
-    "CREATE TABLE directives (\n",
-    "    directive text\n",
-    "    );\n",
-    "\n",
-    "CREATE TABLE autoincrements (\n",
-    "    base text,\n",
-    "    n int,\n",
-    "    primary key (base)\n",
-    "    );\n",
-    "\n",
-    "CREATE TABLE duplicates (\n",
-    "    idspecid text,\n",
-    "    newid text,\n",
-    "    primary key (newid)\n",
-    "    );'''"
+    "ddl = '''table_name,field_name,field_type,field_description\n",
+    "features,id,text,Primary key for features. The content of this field is determined by the user and the file format at creation time\n",
+    "features,seqid,text,Chromosome or contig ID\n",
+    "features,source,text,The source of the annotation (e.g. Ensembl; GENCODE)\n",
+    "features,featuretype,text,The type of feature (e.g. gene; transcript; exon)\n",
+    "features,start,int,The start coordinate of the feature\n",
+    "features,end,int,The end coordinate of the feature\n",
+    "features,score,text,A score associated with the feature (if available)\n",
+    "features,strand,text,The strand of the feature (+; -; or .)\n",
+    "features,frame,text,The coding frame of the feature (0; 1; or 2)\n",
+    "features,attributes,text,A string containing semicolon-separated attribute-value pairs\n",
+    "features,extra,text,A JSON-serialized list of non-standard extra fields. These are sometimes added by analysis tools (e.g. BEDTools). For standard GFF/GTF this field will be empty\n",
+    "features,bin,int,The genomic bin according to the UCSC binning strategy\n",
+    "features,primary key,(id),Same as the field id. Primary key for features\n",
+    "relations,parent,text,Foreign key to features.id – a gene for example\n",
+    "relations,child,text,Foreign key to feature.id – an mRNA or an exon for example\n",
+    "relations,level,int,In graph terms the number of edges between child and parent. In biological terms if parent=gene and child=mRNA then level=1. If parent=gene and child=exon then level=2\n",
+    "relations,primary key,(parent, child, level),Composite key using the fields parent; child and level. Composed of two foreign keys and one integer\n",
+    "meta,dialect,text,A JSON-serialized version of the dialect empirically determined when parsing the original file\n",
+    "meta,version,text,The gffutils version used to create the database\n",
+    "directives,directive,text,String directive without the leading ##\n",
+    "autoincrements,base,text,By default the feature type (gene; exon; etc) but can also be the value of any GFF field or attribute (e.g. the seqid or “GENE_1” (in the case of multiple features with ID=”GENE_1”)\n",
+    "autoincrements,n,int,Current extent of autoincrementing – add 1 to this when autoincrementing next time\n",
+    "autoincrements,primary key,(base),Same as the field base. Primary key for autoincrements\n",
+    "duplicates,idspecid,text,ID of the identified duplicated feature\n",
+    "duplicates,newid,text,New ID for the duplicated feature\n",
+    "duplicates,primary key,(newid),Same as the field newid. Primary key for duplicates\n",
+    "'''"
    ]
   },
   {
@@ -201,10 +186,10 @@
     "    TEMPLATE = '''\n",
     "    {context}\n",
     "\n",
-    "    ### Given a genome annotation in a GFF/GTF format and all of its data is stored in a sqlite3 database with the following SCHEMA: \n",
-    "    <schema>\n",
-    "    {schema}\n",
-    "    </schema>\n",
+    "    ### Given a genome annotation in a GFF/GTF format, and all of its data is stored in a SQLite3 database, whose fields are described within the DDL: \n",
+    "    <ddl>\n",
+    "    {ddl}\n",
+    "    </ddl>\n",
     "\n",
     "    <user_question>\n",
     "    Guide me with a query or a walkthrough based on to answer the following question: {question}\n",
@@ -217,7 +202,7 @@
     "    '''\n",
     "\n",
     "    prompt = PromptTemplate(\n",
-    "        input_variables=[\"context\", \"schema\", \"question\", \"question_codes\"], template=TEMPLATE\n",
+    "        input_variables=[\"context\", \"ddl\", \"question\", \"question_codes\"], template=TEMPLATE\n",
     "    )\n",
     "\n",
     "    chain = prompt | llm | StrOutputParser()\n",
@@ -225,7 +210,7 @@
     "    # Correct way to invoke the chain with a dictionary of inputs\n",
     "    result = chain.invoke({\n",
     "        \"context\": context,\n",
-    "        \"schema\": schema,\n",
+    "        \"ddl\": ddl,\n",
     "        \"question\": question,\n",
     "        \"question_codes\": questions_codes\n",
     "    })\n",
@@ -250,10 +235,10 @@
     "    questions_codes = get_code_examples(question)\n",
     "    \n",
     "    TEMPLATE = '''\n",
-    "    ### Given a genome annotation in a GFF/GTF format and all of its data is stored in a sqlite3 database with the following SCHEMA: \n",
-    "    <schema>\n",
-    "    {schema}\n",
-    "    </schema>\n",
+    "    ### Given a genome annotation in a GFF/GTF format, and all of its data is stored in a SQLite3 database, whose fields are described within the DDL: \n",
+    "    <ddl>\n",
+    "    {ddl}\n",
+    "    </ddl>\n",
     "\n",
     "    <user_question>\n",
     "    Guide me with a query or a walkthrough based on to answer the following question: {question}\n",
@@ -266,14 +251,14 @@
     "    '''\n",
     "\n",
     "    prompt = PromptTemplate(\n",
-    "        input_variables=[\"schema\", \"question\", \"question_codes\"], template=TEMPLATE\n",
+    "        input_variables=[\"ddl\", \"question\", \"question_codes\"], template=TEMPLATE\n",
     "    )\n",
     "\n",
     "    chain = prompt | llm | StrOutputParser()\n",
     "\n",
     "    # Correct way to invoke the chain with a dictionary of inputs\n",
     "    result = chain.invoke({\n",
-    "        \"schema\": schema,\n",
+    "        \"ddl\": ddl,\n",
     "        \"question\": question,\n",
     "        \"question_codes\": questions_codes\n",
     "    })\n",
