modified: prompt.md - inserted instructions section (ver 1.2)

--- a/1.2 - prompt.md
+++ b/1.2 - prompt.md
@@ -14,20 +14,19 @@ The `gffutils` library is a powerful tool for working with GTF/GFF files. It all
 - **Navigate feature relationships:** Explore relationships between features (e.g., parent-child relationships between genes and transcripts) using `db.children()` or `db.parents()`.
 </info>
 
-### **Database Schema**
-
-The `gffutils` database stores genomic features in a structured format. The main table is called `features` and it contains the following columns:
-<schema> 
-- `seqid`: Chromosome or contig ID.
-- `source`: The source of the annotation (e.g., Ensembl, GENCODE).
-- `featuretype`: The type of feature (e.g., gene, transcript, exon).
-- `start`: The start coordinate of the feature. 
-- `end`: The end coordinate of the feature.
-- `score`: A score associated with the feature (if available).
-- `strand`: The strand of the feature (+, -, or .).
-- `frame`: The coding frame of the feature (0, 1, or 2).
-- `attributes`: A string containing semicolon-separated attribute-value pairs.
-</schema>
+Instructions
+<instructions> 
+1. You will receive a DDL containing detailed descriptions of the data in the GTF/GFF database. Analyze it and understand how each column works before crafting your response.
+2. Determine in advance whether your query will require data from dedicated columns, from the attributes column, or from both.
+2.1. Data found in the attributes column should be accessed using list comprehension and the attributes.get() method.
+2.2. Use db.features_of_type() to distinguish DNA sections (such as gene, transcript, exon, etc.).
+2.3. Use db.children() and db.parents() to identify relationships between different portions of the database.
+2.4. In addition to GFFUtils functions, feel free to construct structured SQL queries to retrieve or manipulate data in the database when the logic is too complex for GFFUtils alone.
+3. If necessary, perform logical and arithmetic operations to compute values not directly available in the database (such as gene length, or identifying genes located between other genes).
+4. You will receive a few example question–answer pairs that may help guide the construction of your search query and the final script.
+5. If available, use the chat history to assist you.
+6. Your response must include a well-structured and commented script using GFFUtils functions that retrieves the requested data and prints it for the user.
+</instructions>
 
 ### **Important concepts on genomic units — Genes, Transcripts and Exons**
 
