--- a/1.3 - Test LLM OpenAI.ipynb
+++ b/1.3 - Test LLM OpenAI.ipynb
@@ -2,10 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "435d8af7",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\voczie\\Documents\\UFPB\\TCC\\genomechat\\.venv\\Lib\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    }
+   ],
    "source": [
     "# Imports\n",
     "import os\n",
@@ -20,8 +29,8 @@
     "\n",
     "\n",
     "load_dotenv()\n",
-    "OPENAI_API_KEY = os.getenv(\"OPENAI_API_KEY\")\n",
-    "collection = chromadb.PersistentClient(path=\"databases/\").get_collection(name=\"questions_code_examples_python\")"
+    "OPENAI_API_KEY = os.getenv(\"OPENAI_API_KEY_2\")\n",
+    "collection = chromadb.PersistentClient(path=\"databases/\").get_collection(name=\"questions_code_examples_python\") # Took 36.5s to deal with this part (maybe downloading embedding function part)"
    ]
   },
   {
@@ -38,32 +47,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "b14ed310",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Modify this cell each test!!!!!!!!!!!!!!!!!!!!!\n",
+    "\n",
+    "test_number = 3\n",
+    "\n",
     "if os.path.exists('results/') == False:\n",
     "    os.mkdir('results/')\n",
     "\n",
-    "if os.path.exists('results/openai/') == False:\n",
-    "    os.mkdir('results/openai/')"
+    "if os.path.exists(f'results/Teste {test_number}/') == False:\n",
+    "    os.mkdir(f'results/Teste {test_number}/')\n",
+    "\n",
+    "if os.path.exists(f'results/Teste {test_number}/no-prompt') == False:\n",
+    "    os.mkdir(f'results/Teste {test_number}/no-prompt')\n",
+    "\n",
+    "if os.path.exists(f'results/Teste {test_number}/with-prompt') == False:\n",
+    "    os.mkdir(f'results/Teste {test_number}/with-prompt')\n",
+    "\n",
+    "if os.path.exists(f'results/Teste {test_number}/no-prompt/gpt4omini') == False:\n",
+    "    os.mkdir(f'results/Teste {test_number}/no-prompt/gpt4omini')\n",
+    "\n",
+    "if os.path.exists(f'results/Teste {test_number}/with-prompt/gpt4omini') == False:\n",
+    "    os.mkdir(f'results/Teste {test_number}/with-prompt/gpt4omini')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "e9f44c0e",
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open(\"1.1 - prompt.md\", \"r\", encoding=\"utf-8\") as f:\n",
+    "with open(\"1.2 - prompt.md\", \"r\", encoding=\"utf-8\") as f:\n",
     "    context = f.read()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "a2733932",
    "metadata": {},
    "outputs": [],
@@ -100,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "d05d6ecc",
    "metadata": {},
    "outputs": [],
@@ -131,18 +156,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "9cbca6ed",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "3\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def get_code_examples(question_query, n = 3):\n",
     "    results = collection.query(\n",
@@ -160,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "id": "07d68ce9",
    "metadata": {},
    "outputs": [],
@@ -176,7 +193,7 @@
    "outputs": [],
    "source": [
     "# Use ChatOpenAI instead of OpenAI\n",
-    "llm = ChatOpenAI(model=\"gpt-4o-mini\", temperature=0.1, rate_limiter=rate_limiter)\n",
+    "llm = ChatOpenAI(model=\"gpt-4o-mini\", temperature=0.1, rate_limiter=rate_limiter, api_key=OPENAI_API_KEY)\n",
     "\n",
     "current_time = datetime.datetime.now().strftime(\"%Y%m%d%H%M%S\")\n",
     "\n",
@@ -202,7 +219,7 @@
     "    '''\n",
     "\n",
     "    prompt = PromptTemplate(\n",
-    "        input_variables=[\"context\", \"ddl\", \"question\", \"question_codes\"], template=TEMPLATE\n",
+    "        input_variables=[\"context\", \"ddl\", \"question\", \"questions_codes\"], template=TEMPLATE\n",
     "    )\n",
     "\n",
     "    chain = prompt | llm | StrOutputParser()\n",
@@ -212,22 +229,22 @@
     "        \"context\": context,\n",
     "        \"ddl\": ddl,\n",
     "        \"question\": question,\n",
-    "        \"question_codes\": questions_codes\n",
+    "        \"questions_codes\": questions_codes\n",
     "    })\n",
     "\n",
-    "    with open(f'results/with-prompt/openai/llm_test_question_{ix}_{current_time}.txt', 'w', encoding='utf-8') as f:\n",
+    "    with open(f'results/Teste {test_number}/with-prompt/gpt4omini/llm_test_question_{ix}_{current_time}.txt', 'w', encoding='utf-8') as f:\n",
     "        f.write(result)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "5b571e75",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Use ChatOpenAI instead of OpenAI\n",
-    "llm = ChatOpenAI(model=\"gpt-4o-mini\", temperature=0.1, rate_limiter=rate_limiter)\n",
+    "llm = ChatOpenAI(model=\"gpt-4o-mini\", temperature=0.1, rate_limiter=rate_limiter, api_key=OPENAI_API_KEY)\n",
     "\n",
     "current_time = datetime.datetime.now().strftime(\"%Y%m%d%H%M%S\")\n",
     "\n",
@@ -251,7 +268,7 @@
     "    '''\n",
     "\n",
     "    prompt = PromptTemplate(\n",
-    "        input_variables=[\"ddl\", \"question\", \"question_codes\"], template=TEMPLATE\n",
+    "        input_variables=[\"ddl\", \"question\", \"questions_codes\"], template=TEMPLATE\n",
     "    )\n",
     "\n",
     "    chain = prompt | llm | StrOutputParser()\n",
@@ -260,10 +277,10 @@
     "    result = chain.invoke({\n",
     "        \"ddl\": ddl,\n",
     "        \"question\": question,\n",
-    "        \"question_codes\": questions_codes\n",
+    "        \"questions_codes\": questions_codes\n",
     "    })\n",
     "\n",
-    "    with open(f'results/no-prompt/openai/llm_test_question_{ix}_{current_time}.txt', 'w', encoding='utf-8') as f:\n",
+    "    with open(f'results/Teste {test_number}/no-prompt/gpt4omini/llm_test_question_{ix}_{current_time}.txt', 'w', encoding='utf-8') as f:\n",
     "        f.write(result)"
    ]
   },
