new: test 4 with new questions!

--- a/1.3 - Test LLM OpenAI.ipynb
+++ b/1.3 - Test LLM OpenAI.ipynb
@@ -29,7 +29,7 @@
     "\n",
     "\n",
     "load_dotenv()\n",
-    "OPENAI_API_KEY = os.getenv(\"OPENAI_API_KEY_2\")\n",
+    "OPENAI_API_KEY = os.getenv(\"OPENAI_API_KEY_3\")\n",
     "collection = chromadb.PersistentClient(path=\"databases/\").get_collection(name=\"questions_code_examples_python\") # Took 36.5s to deal with this part (maybe downloading embedding function part)"
    ]
   },
@@ -47,14 +47,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "b14ed310",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Modify this cell each test!!!!!!!!!!!!!!!!!!!!!\n",
     "\n",
-    "test_number = 3\n",
+    "test_number = 4\n",
     "\n",
     "if os.path.exists('results/') == False:\n",
     "    os.mkdir('results/')\n",
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "e9f44c0e",
    "metadata": {},
    "outputs": [],
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "a2733932",
    "metadata": {},
    "outputs": [],
@@ -156,7 +156,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
+   "id": "2416a795",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "questions_2 = [\n",
+    "    \"\"\"How many genes and transcripts are there on chromosome Y?\"\"\",  #1 Gene Count and Distribution by Chromosome\n",
+    "    \"\"\"How many protein-coding transcripts are present on chromosome 1?\"\"\",        #2 Gene Count and Distribution by Chromosome\n",
+    "    \"\"\"What are the Ensembl gene IDs and biotypes of XIST, MALAT1, BRCA1, and COL1A2?\"\"\",    #3 Specific Gene Characteristics\n",
+    "    \"\"\"Which BRCA1 transcript has the smallest average exon size?\"\"\",              #4 Specific Gene Characteristics\n",
+    "    \"\"\"Which gene lies directly downstream of COL1A2 on the same strand?\"\"\",           #5 Chromosomal Location\n",
+    "    \"\"\"Which gene precedes COL1A2 and is on the same strand?\"\"\",       #6 Chromosomal Location\n",
+    "    \"\"\"Create a table showing the number of transcripts per gene for BRCA1, MALAT1, and XIST.\"\"\",      #7 Gene and Isoform Features\n",
+    "    \"\"\"Generate a scatterplot showing the relationship between gene length and number of exons on chromosome X.\"\"\"        #8 Gene and Isoform Features                                                                                       \n",
+    "]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "id": "9cbca6ed",
    "metadata": {},
    "outputs": [],
@@ -177,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "id": "07d68ce9",
    "metadata": {},
    "outputs": [],
@@ -187,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "id": "9605683c",
    "metadata": {},
    "outputs": [],
@@ -197,7 +216,7 @@
     "\n",
     "current_time = datetime.datetime.now().strftime(\"%Y%m%d%H%M%S\")\n",
     "\n",
-    "for ix, question in enumerate(questions):\n",
+    "for ix, question in enumerate(questions_2):\n",
     "    questions_codes = get_code_examples(question)\n",
     "\n",
     "    TEMPLATE = '''\n",
@@ -238,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 9,
    "id": "5b571e75",
    "metadata": {},
    "outputs": [],
@@ -248,7 +267,7 @@
     "\n",
     "current_time = datetime.datetime.now().strftime(\"%Y%m%d%H%M%S\")\n",
     "\n",
-    "for ix, question in enumerate(questions):\n",
+    "for ix, question in enumerate(questions_2):\n",
     "    questions_codes = get_code_examples(question)\n",
     "    \n",
     "    TEMPLATE = '''\n",
